2007-10-04  Peter Johanson  <peter@peterjohanson.com>

	* gtk/Gtk.metadata: Make the public fields on Gtk.Rcstyle writeable.

2007-10-04  Mike Kestner  <mkestner@novell.com>

	* glib/DestroyNotify.cs: add CDeclCallback to the delegate.
	* glib/Signal.cs: use DestroyHelper.
	* gdk/Input.custom: use DestroyHelper.
	* gtk/Quit.custom: remove new on DestroyHelper handler.
	* gtk/TreeModelFilter.custom: remove new on DestroyHelper handler.
	* gtk/TreeViewColumn.custom: remove new on DestroyHelper handler.

2007-10-02  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs: implement the interfaces on the adapters too.
	Generate an Implementor interface for users which exposes the 
	methods to implement.  Register based on the Implementor sub-iface.
	* gtk/*Adapter.custom: custom implementations for the custom
	interface members.
	* gtk/TreeIter.custom: make UserData public.
	* sample/TreeModelDemo.cs: sample for implementing a TreeModel
	interface.

2007-10-01  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs: disable Copy generation fix until I can
	figure out why it breaks DnD.

2007-10-01  Mike Kestner  <mkestner@novell.com>

	* gtk/TreePath.custom: use Marshal.Copy to copy indices array.

2007-10-01  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs: add ctor (), which invokes CreateNativeObject
	to allow direct subclasses that do all the registration automatically.

2007-09-21  Mike Kestner  <mkestner@novell.com>

	* generator/*.cs: add DefaultValue prop for obtaining a
	sane value when we need to return a value but something bad has 
	happened such that we can't get a real value.  Needed for iface
	signal marshaling, among other places we're partially working 
	around it now.

2007-09-19  Mike Kestner  <mkestner@novell.com>

	* generator/InterfaceGen.cs: remove some dead code from a previous
	implementation attempt.

2007-09-19  Mike Kestner  <mkestner@novell.com>

	* generator/VirtualMethod.cs: refactor delegate generation into