@@ -1,3 +1,9 @@
+2007-10-15  Mike Kestner  <mkestner@novell.com>
+
+	* generator/InterfaceGen.cs : gen Handle props as overrides.
+	* glib/GInterfaceAdapter.cs : add abstract Handle prop.
+	* glib/Value.cs: add ctor (GInterfaceAdapter).
+
 2007-10-04  Peter Johanson  <peter@peterjohanson.com>
 
 	* gtk/Gtk.metadata: Make the public fields on Gtk.Rcstyle writeable.
